# TicTacToe

./: CMakeLists.txt  README.md  main.c
data/: img.png~
s3d/: core.c  core.h  render.c  util.c  util.h
s3d/ui/: textfield.c  textfield.h  ui_obj.h
